subnets.tf
# Subnets
resource "aws_subnet" "main-public-1" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-1a"

  tags {
    Name = "main-public-1"
  }
}

resource "aws_subnet" "main-public-2" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-1b"

  tags {
    Name = "main-public-2"
  }
}

resource "aws_subnet" "main-public-3" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.3.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-1c"

  tags {
    Name = "main-public-3"
  }
}

resource "aws_subnet" "main-private-1" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.4.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "eu-west-1a"

  tags {
    Name = "main-private-1"
  }
}

resource "aws_subnet" "main-private-2" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.5.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "eu-west-1b"

  tags {
    Name = "main-private-2"
  }
}

resource "aws_subnet" "main-private-3" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "10.0.6.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "eu-west-1c"

  tags {
    Name = "main-private-3"
  }
}

resource "aws_subnet" "main-rds-private-1" {
  vpc_id            = "${aws_vpc.main.id}"
  cidr_block        = "10.0.7.0/24"
  availability_zone = "eu-west-1a"

  tags {
    Name = "main_rds_subnet1"
  }
}

resource "aws_subnet" "main-rds-private-2" {
  vpc_id            = "${aws_vpc.main.id}"
  cidr_block        = "10.0.8.0/24"
  availability_zone = "eu-west-1b"

  tags {
    Name = "main_rds_subnet2"
  }
}

resource "aws_subnet" "main-rds-private-3" {
  vpc_id            = "${aws_vpc.main.id}"
  cidr_block        = "10.0.9.0/24"
  availability_zone = "eu-west-1c"

  tags {
    Name = "main__rds_subnet3"
  }
}
